Revision history for MIDI-Drummer

{{$NEXT}}

0.2005 2022-04-22 12:10:28
    - Add missing imports!
    - Clean up syncopation lesson code again.

0.2004 2022-04-22 08:24:34
    - Improve documentation again.
    - Optimize code slightly.

0.2003 2022-04-22 08:04:33
    - Fix SEE ALSO links.
    - Improve documentation.

0.2002 2022-04-22 01:05:35
    - Clean up syncopation lesson code.
    - Remove use lib statements.

0.2001 2022-04-22 00:55:47
    - Fix a small but dumb typo.

0.2000 2022-04-22 00:51:08
    - Add a beat counter.
    - Add the ->steady & ->combinatorial methods.
    - Add eg/syncopation lessons from the SEE ALSO linked book.

0.1902 2022-01-19 12:13:04
    - Add missing closed_hh! Whoops

0.1901 2022-01-19 11:59:42
    - Add the ->metronome38 method.

0.1900 2022-01-04 19:00:57
    - Improve documentation.

0.1805 2021-05-03 22:04:18
    - Fix-up the eg/tomorrow-never-knows program.

0.1804 2021-05-03 21:42:38
    - Add the ->sync passthrough method.
    - Improve documentation.

0.1803 2021-04-09 23:00:00
    - Add the eg/tomorrow-never-knows program.
    - Use new Music::Duration values.

0.1802 2020-11-26 11:31:12
    - Don't import anything from MIDI::Simple.

0.1801 2020-11-10 16:33:21
    - Fix a tiny POD syntax issue!

0.1800 2020-11-10 16:23:22
    - Improve documentation.
    - Add a reverb attribute and control-change assignment.

0.1700 2020-10-24 09:56:50
    - Re-add the ability to change kits if using GM Level 2.

0.1605 2020-09-15 17:33:07
    - Improve documentation.
    - Simplify the ->metronome78 beat.

0.1604 2020-09-15 09:47:54
    - Fix the defaults for triplet 32nd, 64th, 128th durations.

0.1603 2020-09-15 09:01:25
    - Fix hi-hat patches in the eg/ programs.
    - Simplify the 5/8 metronome beat.

0.1602 2020-09-02 10:11:27
    - Improve documentation slightly again.

0.1601 2020-09-01 09:28:48
    - Fix Bézier variable names.
    - Add accessors for the acoustic and electric snare and bass.