@@ -1,6 +1,7 @@
 Revision history for MIDI-Drummer
 
 {{$NEXT}}
+    - Add a count option to combinatorial().
 
 0.2005 2022-04-22 12:10:28
     - Add missing imports!
